增加资源同步功能